@@ -1,3 +1,6 @@
+2012-01-17 Aurelien Degremont  <aurelien.degremont@cea.fr>
+	* Using 'ha_node' in models when using backend is ok (ticket #109).
+
 2012-01-05 Stephane Thiell  <stephane.thiell@cea.fr>
 	* Add mount_options per client option (ticket #116).
 
